tests/baselines/reference/importDeclWithExportModifier.errors.txt
==== tests/cases/compiler/importDeclWithExportModifier.ts (1 errors) ====
    module x {
        interface c {
        }
    }
    export import a = x.c;
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2305: Module 'x' has no exported member 'c'.
    var b: a;
    